fixed logo scaling issue on firefox

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -25,7 +25,8 @@ mat-toolbar{
     padding-left: 16px;
 }
 .logo{
-    max-width: 35px;
+    width: 40px;
+    height:34px;
     padding-right: 16px;
     cursor: pointer;
     margin-left: 16px;
